Minor Adjustments to UI and Update for History
Updated UI:
-Production
-Materialcount
-productionmaterials
-productioncomponents

Recording of Production History:
-Will now record production whenever reporting a production.

Updated Transfer Order History Recording:
-Will only record history when transfer is reported succesfully to avoid duplicate of reports.

Changes on models:
-ProductionHistory & ProductionHistoryModel change productiononline to productionline.

--- a/views/materialcount/materialcountscripts.ejs
+++ b/views/materialcount/materialcountscripts.ejs
@@ -135,7 +135,7 @@
                                 $('<td>', { text: materialname, 'data-label': 'Full Name', class: 'custom-mobile-align' }),
                                 $('<td>', { text: item.quantity, 'data-label': 'Position', class: 'custom-mobile-align' }),
                                 $('<td>', { text: item.unit, 'data-label': 'Contact Info', class: 'custom-mobile-align' }),
-                                $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
+                                $('<td>', { text: item.createdby.toUpperCase(), 'data-label': 'Created By', class: 'custom-mobile-align' }),
                                 $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
                                 $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
                                     $('<div>', { class: containerBackground }).append(
