--- a/views/production/production.ejs
+++ b/views/production/production.ejs
@@ -203,16 +203,17 @@
             <table class="table table-bordered custom-mobile-table" id="production-datatable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">Production ID</th>
-                        <th class = "col-1">Product</th>
-                        <th class = "col-1">Start Date</th>
-                        <th class = "col-1">End Date</th>
-                        <th class = "col-1">Quantity</th>
-                        <th class = "col-1">Production Line</th>
-                        <th class = "col-2">Super Visor</th>
-                        <th class = "col-2">Notes</th>      
-                        <th class = "col-1">Status</th>    
-                        <th class = "col-1">Action</th>          
+                        <th class="col-1">ID</th>
+                        <th class="col-1">Product ID</th>
+                        <th class="col-1">Description</th>
+                        <th class="col-1">Quantity</th>
+                        <th class="col-1">Start Date</th>
+                        <th class="col-1">End Date</th>
+                        <th class="col-1">Production Line</th>
+                        <th class="col-2">Super Visor</th>
+                        <th class="col-2">Notes</th>      
+                        <th class="col-1">Status</th>    
+                        <th class="col-1">Action</th>          
                     </tr>
                 </thead>          
                 <tbody>
