--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -191,8 +191,8 @@
                 <table class="table table-bordered custom-mobile-table" id="production-material-datatable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
-                            <th>Material ID</th>
-                            <th>Material Name</th>
+                            <th>ID</th>
+                            <th>Name</th>
                             <th>Description</th>
                             <th>Category</th>
                             <th>Vendor</th>
