Update UI, Scripts and Routes
UI Update:
Products:
-Input field added barcodemodal
-Dropdown field added categorymodal

Update Scripts:
-Added edit for barcode and category for productsscripts
-Remove .reverse() for data in productionscripts

Routes:
-Added ORDER BY DESC for production /load
-Added ORder By DESC for systemlogs /load
-Updated logger details for productprice and productinventory
-Products /edit API now able to update barcode and category

--- a/views/production/productionscripts.ejs
+++ b/views/production/productionscripts.ejs
@@ -240,7 +240,7 @@
                 }));
                 tableBody.append(tr);
             } else {
-                data.reverse().forEach(item => {
+                data.forEach(item => {
                     let action = '';
                     if ('<%= accesstype%>' == "Owner"){
                         if (item.status === 'PENDING') {
