--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -14,20 +14,37 @@
                         <h6 class="m-0 font-weight-bold table-title">Update Product: </h6>
                     </div>
                     <div class="card-body">
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label">Product ID: </label>
                                 <input autocomplete="off" id="productid" name="productid" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
-                                <label class="form-label">Product Description: </label>
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
+                                <label class="form-label">Description: </label>
                                 <input autocomplete="off" id="descriptionmodal" name="descriptionmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Barcode: </label>
+                                <input autocomplete="off" id="barcodemodal" name="barcodemodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
+                                <div class="input-group">
+                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Category" name="categorymodal"
+                                        id="categorymodal" />
+                                    <input autocomplete="off" type="hidden" id="categorymodalID" name="categorymodalID" />
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">Select Category</span>
+                                    </div>
+                                </div>
+                                <div class="custom-dropdown cdw-tableoption" id="categorymodalDropdown"></div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label">Product Image:</label>
                                 <div class="input-group mb-3">
                                     <div class="custom-file">
@@ -110,10 +127,30 @@
                             <div class="col-md-6">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text" id="basic-addon2">Product Barcode</span>
+                                        <span class="input-group-text" id="basic-addon2">Barcode</span>
                                     </div>
                                     <input autocomplete="off" id="barcode" name="barcode" type="text" class="form-control" placeholder="Enter Barcode" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
+                            </div>
+                        </div>
+
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6 d-flex">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon2">Cost</span>
+                                    </div>
+                                    <input autocomplete="off" id="cost" name="cost" type="text" class="form-control" placeholder="Enter Cost" aria-label="cost" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
+                                </div>
+                                
+                                <!-- <span class="mt-2 ml-2">
+                                    <i class="fas fa-question-circle"></i>
+                                </span> -->
+                                <div class="tooltip-container mt-1 ml-2">
+                                    <i class="fas fa-question-circle"></i>
+                                    <span class="tooltip">Total Cost of the Product. Can be empty if the product is made through Production.</span>
+                                    <span class="text"></span>
+                                  </div>
                             </div>
                         </div>
     
