--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -6,6 +6,8 @@ $(document).ready(function () {
     let base64StringModal = "";
     let productid = "";
     let imagedescription = "";
+    let description = "";
+    let barcode = "";
     let status = "";
 
     LoadTable();
@@ -37,6 +39,8 @@ $(document).ready(function () {
         console.log(dataRow);
         productid = dataRow[0];
         imagedescription = dataRow[1];
+        description = dataRow[2];
+        barcode = dataRow[5];
         status = dataRow[8]
     }) 
 
@@ -169,9 +173,10 @@ $(document).ready(function () {
 
     $(document).on('click', '#addBtn', function () {
         let description = $('#description').val();
-        let price = $('#price').val();
+        let price = RemoveCurrencyFormatting($('#price').val());
         let category = $('#categoryID').val();
         let barcode = $('#barcode').val();
+        let cost = RemoveCurrencyFormatting($('#cost').val());
         let productimage = base64String
         var message = "";
 
@@ -184,7 +189,6 @@ $(document).ready(function () {
             warning('Required', `Please fill up ${message}`);
         }
         else {
-            const formattedprice = parseFloat(price.replace(/₱|,/g, ''));
             $.ajax({
                 type: 'GET',
                 url: '/branch/load',
@@ -200,12 +204,13 @@ $(document).ready(function () {
                         type: 'POST',
                         url: '/products/save',
                         data: {
-                            price: formattedprice,
+                            price: price,
                             category: category,
                             barcode: barcode,
                             description: description,
                             productimage: productimage,
                             branchid: branchid,
+                            cost: cost,
                         },
                         success: function (result) {
                             if (result.msg == 'success') {
@@ -215,6 +220,7 @@ $(document).ready(function () {
                                 $('#description').val('');
                                 $('#price').val('');
                                 $('#barcode').val('');
+                                $('#cost').val('');
                                 $('#category').val('');
                                 $('#imageInput').val('');
                             }
@@ -281,7 +287,7 @@ $(document).ready(function () {
                     }),
                     $('<td>', { text: item.category, 'data-label': 'Category', class: 'custom-mobile-align' }),
                     $('<td>', { text: item.barcode, 'data-label': 'Barcode', class: 'custom-mobile-align' }),
-                    $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
+                    $('<td>', { text: item.createdby.toUpperCase(), 'data-label': 'Created By', class: 'custom-mobile-align' }),
                     $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
                     $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
                         $('<div>', { class: containerBackground }).append(
@@ -295,7 +301,6 @@ $(document).ready(function () {
             });
         }
     }
-
 
     function LoadTable() {
         $(".progress").hide();
@@ -343,7 +348,35 @@ $(document).ready(function () {
                 let container = result.data;
                 console.log(container)
                 $.each(container, (key, item) => {
-                    if (item.status === "ACTIVE") {
+                    if (item.status === "ACTIVE" && item.categoryname != "Material") {
+                        let name = item.categoryname;
+                        let id = item.categorycode;
+                        activeData.push({
+                            display: name,
+                            value: id,
+                        });
+                    }
+                });
+                AddDropdownData(dropdownID, activeData, inputID, hiddenID)
+            },
+            error: function (err) {
+                warning('Warning', err);
+            },
+        });
+
+        
+        $.ajax({
+            type: "GET",
+            url: "/category/load",
+            success: function (result) {
+                let activeData = [];
+                let dropdownID = "categorymodalDropdown";
+                let inputID = "categorymodal";
+                let hiddenID = "categorymodalID";
+                let container = result.data;
+                console.log(container)
+                $.each(container, (key, item) => {
+                    if (item.status === "ACTIVE" && item.categoryname != "Material") {
                         let name = item.categoryname;
                         let id = item.categorycode;
                         activeData.push({
@@ -437,15 +470,21 @@ $(document).ready(function () {
         })
     });
 
+    $(document).on("input", "#categorymodal", function () {
+        $("#categorymodalID").val("");
+    });
+
     $(document).on('click', '#updateBtn', function () {
         // console.log(this.val() + "CLICKED");
         let productid = $('#productid').val();
         let description = $('#descriptionmodal').val();
+        let barcode = $('#barcodemodal').val();
+        let category = $('#categorymodalID').val();
         let productimage = base64StringModal;
 
         var message = "";
 
-        if (description == '' && productimage == ''){
+        if (description == '' && productimage == '' && barcode == '' && category == ''){
             message += 'Fill up atleast 1 input field before updating'
         }
 
@@ -460,6 +499,8 @@ $(document).ready(function () {
                     productid: productid,
                     description: description,
                     productimage: productimage,
+                    barcode: barcode,
+                    category: category,
                 },
                 success: function (result) {
                     if (result.msg == 'success') {
@@ -467,6 +508,9 @@ $(document).ready(function () {
                         $('#productsModal').modal('hide');
                         $('#descriptionmodal').val('');
                         $('#imageInputModal').val('');
+                        $('#barcodemodal').val('');
+                        $('#categorymodal').val('');
+                        $('#categorymodalID').val('');
                         success('Saved', 'Successfully')
                     }
 
