--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -255,11 +255,11 @@
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Production Inventory</span>
         </a>
-        <h6 class="collapse-header">Logs:</h6>
+        <!-- <h6 class="collapse-header">Logs:</h6>
         <a class="collapse-item" href="#">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Logs</span>
-        </a>
+        </a> -->
       </div>
     </div>
   </li>
