--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -179,13 +179,14 @@
                 <table class="table table-bordered custom-mobile-table" id="productioncomponents-datatable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
-                            <th class = "col-1">Component ID</th>
-                            <th class = "col-2">Product name</th>
+                            <th>ID</th>
+                            <th>Product Name</th>
+                            <th>Product ID</th>
                             <th>Components</th>
                             <th>Created by</th>
                             <th>Created date</th>
-                            <th class = "col-1">Status</th>
-                            <th class = "col-1">Action</th>               
+                            <th class="col-1">Status</th>
+                            <th class="col-1"></th>               
                         </tr>
                     </thead>
                         
