--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -235,6 +235,7 @@
                         <th>Image</th>
                         <th>Description</th>
                         <th>Price</th>
+                        <th>Cost</th>
                         <th>Category</th>
                         <th>Barcode</th>
                         <th>Created by</th>
