--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -23,11 +23,11 @@
                         </li>
                         <% if (accesstype === "Owner" || accesstype === "Manager") { %>
                             <li class="nav-item col text-center mb-1">
-                                <a class="nav-link dashboard-option" id="sales-per-employee-tab" data-toggle="pill" href="#sales-per-employee" role="tab" aria-controls="sales-per-employee" aria-selected="false">Employee</a>
+                                <a class="nav-link dashboard-option" id="sales-per-employee-tab" data-toggle="pill" href="#sales-per-employee" role="tab" aria-controls="sales-per-employee" aria-selected="false">Employees Sales</a>
                             </li>
                         <% } %>
                         <li class="nav-item col text-center mb-1">
-                            <a class="nav-link dashboard-option" id="yearly-sales-tab" data-toggle="pill" href="#yearly-sales" role="tab" aria-controls="yearly-sales" aria-selected="false">Yearly Sales</a>
+                            <a class="nav-link dashboard-option" id="branches-sales-tab" data-toggle="pill" href="#branches-sales" role="tab" aria-controls="branches-sales" aria-selected="false">Branches Sales</a>
                         </li>
                     </ul>
                 </div>
@@ -45,43 +45,43 @@
                                             </a>
                                         </li>
                                         <li class="nav-item sales-options text-center mb-1">
-                                            <a class="sales-link" id="refunds-option" data-toggle="pill" href="#refunds" role="tab" aria-controls="refunds" aria-selected="false">
+                                            <a class="sales-link" id="refunds-option" data-toggle="pill" href="#" role="tab" aria-controls="refunds" aria-selected="false">
                                                 <span>Refunds</span><br>
-                                                <span>₱0.00</span>
+                                                <span id="refunds-total">₱0.00</span>
                                             </a>
                                         </li>
                                         <li class="nav-item sales-options text-center mb-1">
-                                            <a class="sales-link" id="discounts-option" data-toggle="pill" href="#discounts" role="tab" aria-controls="discounts" aria-selected="false">
+                                            <a class="sales-link" id="discounts-option" data-toggle="pill" href="#" role="tab" aria-controls="discounts" aria-selected="false">
                                                 <span>Discounts</span><br>
-                                                <span>₱0.00</span>
+                                                <span id="discounts-total">₱0.00</span>
                                             </a>
                                         </li>
                                         <li class="nav-item sales-options text-center mb-1">
-                                            <a class="sales-link" id="netsales-option" data-toggle="pill" href="#netsales" role="tab" aria-controls="netsales" aria-selected="false">
+                                            <a class="sales-link" id="netsales-option" data-toggle="pill" href="#" role="tab" aria-controls="netsales" aria-selected="false">
                                                 <span>Net Sales</span><br>
-                                                <span>₱0.00</span>
+                                                <span id="net-sales-total">₱0.00</span>
                                             </a>
                                         </li>
                                         <li class="nav-item sales-options text-center mb-1">
-                                            <a class="sales-link" id="grossprofit-option" data-toggle="pill" href="#grossprofit" role="tab" aria-controls="grossprofit" aria-selected="false">
+                                            <a class="sales-link" id="grossprofit-option" data-toggle="pill" href="#" role="tab" aria-controls="grossprofit" aria-selected="false">
                                                 <span>Gross Profit</span><br>
-                                                <span>₱0.00</span>
+                                                <span id="gross-profit-total">₱0.00</span>
                                             </a>
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="card-body" style="height: 450px;">
+                                <div class="card-body p-3" style="height: 450px;">
                                     <div class="tab-content" id="sales-tab-contents">
-                                        <div class="tab-pane fade show active" id="grosssales" role="tabpanel" aria-labelledby="grosssales-option">
+                                        <div class="tab-pane show active" id="grosssales" role="tabpanel" aria-labelledby="grosssales-option">
                                             <div class="row">
                                                 <div class="col-md-12">
-                                                    <div class="card-body gross-sales-chart border">
+                                                    <div class="card-body p-0 gross-sales-chart">
                                                         <canvas id="grosssaleschart"></canvas>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="tab-pane fade" id="refunds" role="tabpanel" aria-labelledby="refunds-option">
+                                        <!-- <div class="tab-pane fade" id="refunds" role="tabpanel" aria-labelledby="refunds-option">
                                             <div class="row">
                                                 Refund
                                             </div>
@@ -100,7 +100,7 @@
                                             <div class="row">
                                                 grossprofit
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -216,7 +216,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="yearly-sales" role="tabpanel" aria-labelledby="yearly-sales-tab">
+                        <div class="tab-pane fade" id="branches-sales" role="tabpanel" aria-labelledby="branches-sales-tab">
                             <div class="card dashboard-size">
                                 <div class="card-header py-3 header-bg">
                                     <h6 class="m-0 font-weight-bold table-title">Current Year Sales</h6>
